# SWM_holdings_a3

./: DETAILED_README.md  README.md  pyproject.toml  python-code-check.sh  r2_int_a3_template.yaml
functions/agency_id_sf/: a3_get_agency_id_sf.py
functions/landmark_sftp/: a3_landmark_sftp.py
functions/parse_holding_file/: a3_parse_holding_file.py  requirements.txt
functions/rejected_file/: a3_rejected_file.py
functions/sch_event_receiver/: a3_landmark_sch_event_receiver.py
functions/send_file_agencies/: a3_send_file_agencies.py
functions/zip_holding_file/: a3_zip_holding_file.py
pipelines/: r2_int_a3_pipeline.yaml
statemachine/: agent_file_transfer.asl.json
