[tool.poetry]
name = "r2-int-a3-holdings"
version = "0.1.0"
description = ""
authors = ["Suhas_G"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.39.0"
botocore = "^1.39.9"
pytest = "^8.4.0"
pytest-cov = "^6.2.0"
requests = "^2.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
